game fully implemented, needs game screen

--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
           </div>
         </div>
         <div class="info-container">
+          <h2>HIGH SCORE</h2>
+          <div class="line-container">
+            <span id="bestScore" class="absolute-center">31</span>
+          </div>
+        </div>
+        <div class="info-container">
           <h2>SCORE</h2>
           <div class="line-container">
             <span id="score" class="absolute-center">31</span>
