game fully implemented, needs game screen

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
     <title>Tetris</title>
   </head>
   <body>
-    <h1 id="title">tetris</h1>
+    <h1 id="title">        <span class="text-red">T</span>
+      <span class="text-blue">E</span>
+      <span class="text-green">T</span>
+      <span class="text-purple">R</span>
+      <span class="text-yellow">I</span>
+      <span class="text-orange">S</span></h1>
     <div class="tetris-container">
       <div class="col col-1">
         <div class="info-container">
@@ -129,7 +134,9 @@
           </div>
         </div>
       </div>
-      <div class="col col-2 tetris-game" id="tetris">TETRIS</div>
+      <div class="col col-2 tetris-game" id="tetris"><h1>
+
+      </h1></div>
       <div class="col col-3">
         <div class="info-container">
           <h2>NEXT</h2>
