--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <title>Tetris</title>
   </head>
   <body>
-    <h1 id="title">        <span class="text-red">T</span>
+    <h1 id="title" class="game-title">        <span class="text-red">T</span>
       <span class="text-blue">E</span>
       <span class="text-green">T</span>
       <span class="text-purple">R</span>
       <span class="text-yellow">I</span>
-      <span class="text-orange">S</span></h1>
+      <span class="text-orange">S</span>
+    </h1>
     <div class="tetris-container">
       <div class="col col-1">
         <div class="info-container">
@@ -406,7 +407,12 @@
         </div>
       </div>
     </div>
+    
+    <div class="how-to-play">
+      <h4>HOW TO PLAY:</h4>
+      Press TETRIS title to start playing. Use left and right arrow keys to move the block. Up arrow key to rotate block. Press shift to hold a block. Press space to hard drop a block.
     </div>
+    
     <script src="script.js"></script>
   </body>
 </html>
