a lot of refactoring done

--- a/index.html
+++ b/index.html
@@ -135,9 +135,7 @@
           </div>
         </div>
       </div>
-      <div class="col col-2 tetris-game" id="tetris"><h1>
-
-      </h1></div>
+      <div class="col col-2 tetris-game" id="tetris"></div>
       <div class="col col-3">
         <div class="info-container">
           <h2>NEXT</h2>
@@ -404,6 +402,10 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="info-container game-buttons">
+          <button class="btn" id="playBtn">PLAY</button>
+          <button class="btn" id="resetBtn">RESET</button>
         </div>
       </div>
     </div>
